Change action bar icon back to menu, setting items included. All keyboard buttons aligned and equally stretched.
Former Settings page can also be found in the 'About' page, currently unavailable.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,5 +19,6 @@
         <item name="buttonStyle">@style/Widget.Material3.Button.TextButton</item>
         <!-- Customize your theme here. -->
         <item name="textFillColor">#66000000</item>
+        <!--<item name="materialAlertDialogTheme">@style/MaterialAlertDialog.Material3</item>-->
     </style>
 </resources>
