--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -20,5 +20,7 @@
         <!-- Grayed out text color. -->
         <item name="textFillColor">#66FFFFFF</item>
         <!-- Customize your theme here. -->
+        <item name="materialAlertDialogTheme">@style/ThemeOverlay.Material3.MaterialAlertDialog.Centered</item>
+
     </style>
 </resources>
