--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,8 @@
                 android:id="@+id/eq_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minLines="2"/>
+                android:minLines="2"
+                android:backgroundTint="@color/ic_launcher_background"/>
         </com.google.android.material.textfield.TextInputLayout>
         <TextView
             android:id="@+id/mem_text"
@@ -91,66 +92,66 @@
 
             <Button
                 android:id="@+id/kb_mc"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/keyboard_button_margin"
                 android:backgroundTint="#1100aa00"
                 android:text="MC"
-                android:textSize="20sp"
+                android:textSize="@dimen/keyboard_button_text"
                 android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/kb_mp"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/keyboard_button_margin"
                 android:backgroundTint="#1100aa00"
                 android:text="M+"
-                android:textSize="20sp"
+                android:textSize="@dimen/keyboard_button_text"
                 android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/kb_mm"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/keyboard_button_margin"
                 android:backgroundTint="#1100aa00"
                 android:text="M-"
-                android:textSize="20sp"
+                android:textSize="@dimen/keyboard_button_text"
                 android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/kb_mr"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/keyboard_button_margin"
                 android:backgroundTint="#1100aa00"
                 android:text="MR"
-                android:textSize="18sp"
+                android:textSize="@dimen/keyboard_button_text"
                 android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/kb_func"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/keyboard_button_margin"
                 android:backgroundTint="#1100aa00"
                 android:text="func"
-                android:textSize="18sp"
+                android:textSize="@dimen/keyboard_button_text"
                 android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/kb_const"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/keyboard_button_margin"
                 android:backgroundTint="#1100aa00"
                 android:text="cons"
-                android:textSize="18sp"
+                android:textSize="@dimen/keyboard_button_text"
                 android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/kb_c"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/keyboard_button_margin"
                 android:backgroundTint="#11aa0000"
                 android:text="C"
-                android:textSize="18sp"
+                android:textSize="@dimen/keyboard_button_text"
                 android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/kb_back"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/keyboard_button_margin"
                 android:backgroundTint="#11aa0000"
                 android:text="←"
-                android:textSize="18sp"
+                android:textSize="@dimen/keyboard_button_text"
                 android:layout_columnWeight="1"/>
         </GridLayout>
 
