--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="keyboard_button_margin">2dp</dimen>
+    <dimen name="keyboard_button_text">16dp</dimen>
 </resources>
