--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,4 +2,5 @@
 <resources>
     <attr name="actionBarForeground" format="color" />
     <attr name="customFillColor" format="color" />
+    <attr name="calcButtonFontColor" format="color" />
 </resources>
