--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/material_dynamic_primary70</item>
         <item name="colorPrimaryVariant">@color/material_dynamic_neutral_variant50</item>
         <item name="colorOnPrimary">@color/material_dynamic_primary10</item>
+        <item name="calcButtonFontColor">@color/material_dynamic_primary10</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/material_dynamic_secondary70</item>
         <item name="colorSecondaryVariant">@color/design_default_color_secondary_variant</item>
