--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="keyboard_button_margin">2dp</dimen>
     <dimen name="keyboard_button_text">16dp</dimen>
+    <dimen name="dedicated_button_margin">8dp</dimen>
 </resources>
