Add landscape layout for High DPI devices like tablets. Landscape layout for phones are under construction.

--- a/app/src/main/res/values-sw400dp-land/dimens.xml
+++ b/app/src/main/res/values-sw400dp-land/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="keyboard_button_margin">10dp</dimen>
     <dimen name="keyboard_button_text">16dp</dimen>
     <dimen name="dedicated_button_margin">2dp</dimen>
+    <dimen name="land_min_width">400dp</dimen>
 </resources>
