--- a/app/src/main/res/values-sw400dp/dimens.xml
+++ b/app/src/main/res/values-sw400dp/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="keyboard_button_margin">6dp</dimen>
     <dimen name="keyboard_button_text">18dp</dimen>
     <dimen name="dedicated_button_margin">12dp</dimen>
+    <dimen name="land_min_width">400dp</dimen>
 </resources>
