--- a/app/src/main/res/values-sw650dp-land/dimens.xml
+++ b/app/src/main/res/values-sw650dp-land/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="keyboard_button_margin">12dp</dimen>
     <dimen name="keyboard_button_text">18dp</dimen>
     <dimen name="dedicated_button_margin">4dp</dimen>
+    <dimen name="land_min_width">600dp</dimen>
 </resources>
