--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="keyboard_button_margin">2dp</dimen>
     <dimen name="keyboard_button_text">16dp</dimen>
     <dimen name="dedicated_button_margin">8dp</dimen>
+    <dimen name="land_min_width">360dp</dimen>
 </resources>
